--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,156 @@
 * {
-    margin: 0%;
-    padding: 0%;
+  margin: 0%;
+  padding: 0%;
 }
 
-.header {
+/*styles for header/navbar*/
+header {
+  background-color: #343434;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.logoImg {
+  height: auto;
+  width: 7em;
+}
+
+.links {
+  color: white;
+  text-decoration: none;
+  margin: 0 7em;
+  font-weight: bolder;
+  font-variant: small-caps;
+  font-size: 1.5em;
+  font-family: "Open Sans", sans-serif;
+}
+
+.links:hover {
+  color: #ec5c24;
+  text-decoration: underline;
+}
+
+/*styles for the image at the top + button on it*/
+.siteBody {
+  height: 500px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: relative;
+}
+
+.topImg {
+  background-image: url("topImg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.button {
+  position: absolute;
+  top: 20em;
+  left: 10em;
+  padding: 10px 20px;
+  background-color: black;
+  border: solid #ec5c24 2px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.button:hover {
+  transform: translateY(-5px);
+}
+
+/*styles for services image gallery*/
+.services {
     background-color: black;
-}
-
-nav {
+    padding: 2em;
+  }
+  
+  .gallery {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    padding: 2em;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 125%;
-    margin: 0 10px;
-}
-
-a:hover {
-    color: orange;
-    text-decoration: underline;
-}
-
-.logo {
+    justify-content: space-between;
+  }
+  
+  .row {
     display: flex;
-    justify-content: start;
-}
-
-.inkLogo {
+    justify-content: space-between;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+  
+  .serviceImgContainer {
+    position: relative;
+    width: calc(33.33% - 50px);
     height: auto;
-    width: 25%;
-}
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .serviceImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: solid #ec5c24 2px;
+    border-radius: 5px;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(236, 92, 36, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+  }
+  
+  .serviceImgContainer:hover .overlay {
+    opacity: 1;
+  }
+  
+  .overlay a {
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+  }
+  
+  .overlay a:hover {
+    color: #ffcc00;
+  }
+  
+  /*break image styles*/
+  .breakImg {
+    height: 10em;
+    background-color: #ffffff;
+  }
 
+  h1 {
+    color: #343434;
+    text-align: center;
+    padding-top: 1em;
+    font-size: 3em;
+    font-family: "Poppins","Helvetica Neue",Arial,sans-serif;;
+  }
