--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ header {
 }
 
 .topImg {
-  background-image: url("topImg.jpg");
+  background-image: url("images/topImg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -57,6 +57,7 @@ header {
   z-index: -1;
 }
 
+/*button movement via w3Schools*/
 .button {
   position: absolute;
   top: 20em;
@@ -79,78 +80,141 @@ header {
 
 /*styles for services image gallery*/
 .services {
-    background-color: black;
-    padding: 2em;
-  }
-  
-  .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  
-  .row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    width: 100%;
-  }
-  
-  .serviceImgContainer {
-    position: relative;
-    width: calc(33.33% - 50px);
-    height: auto;
-    margin-right: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .serviceImg {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border: solid #ec5c24 2px;
-    border-radius: 5px;
-  }
-  
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(236, 92, 36, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-  }
-  
-  .serviceImgContainer:hover .overlay {
-    opacity: 1;
-  }
-  
-  .overlay a {
-    color: white;
-    font-size: 24px;
-    text-decoration: none;
-    transition: color 0.3s ease-in-out;
-  }
-  
-  .overlay a:hover {
-    color: #ffcc00;
-  }
-  
-  /*break image styles*/
-  .breakImg {
-    height: 10em;
-    background-color: #ffffff;
-  }
+  background-color: black;
+  padding: 2em;
+}
 
-  h1 {
-    color: #343434;
-    text-align: center;
-    padding-top: 1em;
-    font-size: 3em;
-    font-family: "Poppins","Helvetica Neue",Arial,sans-serif;;
-  }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.serviceImgContainer {
+  position: relative;
+  width: calc(33.33% - 50px);
+  height: auto;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.serviceImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: solid #ec5c24 2px;
+  border-radius: 5px;
+}
+
+/*overlay styles via w3schools*/
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(236, 92, 36, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.serviceImgContainer:hover .overlay {
+  opacity: 1;
+}
+
+.overlay a {
+  color: white;
+  font-size: 24px;
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.overlay a:hover {
+  color: #ffcc00;
+}
+
+/*break image styles*/
+.breakImg {
+  height: 10em;
+  background-color: #ffffff;
+}
+
+h1 {
+  color: #343434;
+  text-align: center;
+  padding-top: 1em;
+  font-size: 3em;
+  font-family: "Poppins", "Helvetica Neue", Arial, sans-serif;
+}
+
+/*styles for veteran owned break image*/
+.vetOwned {
+  background-image: url("images/vetOwned.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.veteranBreakImage {
+  height: 500px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: relative;
+}
+
+/*button movement via w3Schools*/
+.vetButton {
+  position: absolute;
+  top: 20em;
+  right: 10em;
+  padding: 10px 20px;
+  background-color: #343434;
+  border: solid #f0482c 2px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: transform 0.2s ease-in-out;
+}
+
+.vetButton:hover {
+  transform: translateY(-5px);
+}
+
+footer {
+  border-top: solid #ec5c24 1px;
+  margin-right: 10%;
+  margin-left: 10%;
+  background-color: #343434;
+  font-size: 20px;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.footLink {
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+}
+
+.footLink:hover {
+  text-decoration: underline;
+}
