--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*Home + Nav & Footer*/
 * {
   margin: 0%;
   padding: 0%;
@@ -99,7 +100,7 @@ header {
 
 .serviceImgContainer {
   position: relative;
-  width: calc(33.33% - 50px);
+  width: calc(33.33% - 5%);
   height: auto;
   margin-right: 10px;
   margin-bottom: 10px;
@@ -135,6 +136,7 @@ header {
 .overlay a {
   color: white;
   font-size: 24px;
+  font-family: "Open Sans", sans-serif;
   text-decoration: none;
   transition: color 0.3s ease-in-out;
 }
@@ -162,18 +164,39 @@ h1 {
   background-image: url("images/vetOwned.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
 
+.vetTxt {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #ffffff;
+  text-align: center;
+  padding: 20px;
+}
+
+.vetTxt h1 {
+  font-size: 48px;
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
 .veteranBreakImage {
-  height: 500px;
+  height: 30em;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   position: relative;
 }
 
@@ -198,23 +221,150 @@ h1 {
   transform: translateY(-5px);
 }
 
+/*Footer styles*/
 footer {
   border-top: solid #ec5c24 1px;
-  margin-right: 10%;
-  margin-left: 10%;
-  background-color: #343434;
+  margin-right: 8%;
+  margin-left: 8%;
+  margin-top: 1%;
   font-size: 20px;
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: rgba(255, 255, 255, 0.5);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: black;
 }
 
 .footLink {
-  color: rgba(255, 255, 255, 0.5);
+  color: black;
   text-decoration: none;
 }
 
 .footLink:hover {
   text-decoration: underline;
 }
+
+.footText {
+  opacity: 85%;
+  font-size: 0.7em;
+  font-family: "Open Sans", sans-serif;
+}
+
+/*About Us Section*/
+.aboutBody {
+  margin: 2em 10em 0 10em;
+}
+
+.aboutUs {
+  background-image: url("images/about.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.aboutTxt {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #ffffff;
+  text-align: center;
+  padding: 20px;
+}
+
+.aboutTxt h1 {
+  font-size: 48px;
+  margin-bottom: 20px;
+  color: #ffffff;
+  padding-top: 0%;
+  padding: 25px;
+  background-color: rgba(86, 85, 85, 0.5);
+  
+}
+
+.aboutTopImage {
+  height: 35em;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  position: relative;
+}
+
+.whoTitle {
+  border-bottom: solid rgba(236, 92, 36, 0.5) 1px;
+  text-align: center;
+  font-size: 2em;
+  padding: 1em 0 1em 0;
+}
+
+.whoTxt {
+  padding-top: 1em;
+  padding-bottom: 2em;
+  font-size: large;
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+}
+
+/*Styles for alternating images + text (w3schools helped a lot in this section)*/
+.infoSection {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 75vh;
+  padding-bottom: 1em;
+}
+
+.infoItem {
+  width: 50%;
+  height: auto;
+  overflow: hidden;
+  padding: 1em;
+}
+
+.infoItem img {
+  height: 100%;
+  object-fit: cover;
+  padding: 0 1em 0 1em;
+  border-radius: 5%;
+  box-shadow: 2px 2px 2px black;
+}
+
+.infoTxt {
+  width: 50%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1em;
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  border: solid #f0482c 1px;
+  margin-top:1em;
+  background-color: #343434;
+}
+
+.infoTxt h2 {
+  font-size: 2em;
+  margin-bottom: 1em;
+  color: #ffffff;
+}
+
+.infoTxt p {
+  font-size: large;
+  line-height: 1.5;
+  color: #ffffff;
+}
+
+.contactLink {
+  color: white;
+}
+
+/*Products Page Styles*/
